<resources>
    <string name="app_name">bgowiki</string>
    <string name="sevent">灵基一览</string>
    <string name="mine">我的</string>
    <string name="act">活动一览</string>
    <string name="fox">素材一览</string>
    <string name="titile">混沌の恶</string>
    <string name="title_activity_welcome">Welcome</string>
    <string name="gap">素材缺口统计</string>
    <string name="search">搜索</string>
    <string name="searchIm">输入搜索信息</string>
    <string name="classone">阶职:</string>
    <string name="dq">当前等级</string>
    <string name="mb">目标等级</string>
    <string-array name="lingji">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
    </string-array>
    <string-array name="Skill">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
</resources>
