<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

                xmlns:app="http://schemas.android.com/apk/res-auto" android:layout_width="match_parent"

                android:layout_height="match_parent">





  <ImageView

          android:layout_width="100dp"

          android:layout_height="100dp"

          android:id="@+id/imgRole" app:srcCompat="@drawable/ic_launcher"

          android:layout_below="@+id/textView23" android:layout_alignParentLeft="true"

          android:layout_alignParentStart="true"/>

  <ImageView

          android:layout_width="100dp"

          android:layout_height="100dp" app:srcCompat="@drawable/ic_launcher"

          android:id="@+id/imgSkill1"

          android:layout_marginTop="18dp"

          android:layout_below="@+id/imgRole" android:layout_alignParentLeft="true"

          android:layout_alignParentStart="true"/>

  <ImageView

          android:layout_width="100dp"

          android:layout_height="100dp" app:srcCompat="@drawable/ic_launcher"

          android:id="@+id/imgSkill2"

          android:layout_marginTop="13dp" android:layout_below="@+id/imgSkill1" android:layout_alignParentLeft="true"

          android:layout_alignParentStart="true"/>

  <ImageView

          android:layout_width="100dp"

          android:layout_height="100dp" app:srcCompat="@drawable/ic_launcher"

          android:layout_marginTop="12dp" android:id="@+id/imgSkill3" android:layout_below="@+id/imgSkill2"

          android:layout_alignParentLeft="true" android:layout_alignParentStart="true"/>

  <TextView

          android:text="TextView"

          android:layout_width="wrap_content"

          android:layout_height="30dp"

          android:id="@+id/textView23"

          android:textSize="20sp"

          android:gravity="center"

          android:layout_alignParentTop="true" android:layout_alignParentLeft="true"

          android:layout_alignParentStart="true"

          android:layout_alignParentRight="true" android:layout_alignParentEnd="true"/>

  <TextView

          android:text="@string/classone"

          android:layout_width="50dp"

          android:textSize="20sp"

          android:layout_height="wrap_content"

          android:layout_toRightOf="@+id/imgRole"

          android:id="@+id/tv123" android:layout_below="@+id/textView23"/>

  <TextView

          android:text="TextView"

          android:layout_width="100dp"

          android:layout_height="wrap_content"

          android:layout_toEndOf="@+id/tv123"

          android:textSize="20sp"

          android:id="@+id/tvJob"

          android:layout_below="@+id/textView23" android:layout_alignBottom="@+id/tv123"/>

  <TextView

          android:text="星级："

          android:layout_width="wrap_content"

          android:textSize="20sp"

          android:layout_height="wrap_content" android:layout_below="@+id/textView23"

          android:layout_toEndOf="@+id/tvJob"

          android:id="@+id/textView6"

          android:layout_alignBottom="@+id/tvJob" android:layout_toRightOf="@+id/tvJob"/>

  <TextView

          android:text="TextView"

          android:textSize="20sp"

          android:layout_width="wrap_content"

          android:layout_height="wrap_content"

          android:id="@+id/tvStarCount"

          android:layout_toRightOf="@+id/textView6"

          android:layout_toEndOf="@+id/textView6" android:layout_below="@+id/textView23"

          android:layout_alignBottom="@+id/textView6"/>

  <TextView

          android:text="当前灵基"

          android:textSize="20sp"

          android:layout_width="wrap_content"

          android:layout_height="wrap_content"

          android:id="@+id/textView8" android:layout_toRightOf="@+id/imgRole"

          android:layout_below="@+id/tv123"/>

  <TextView

          android:text="目标灵基"

          android:textSize="20sp"

          android:layout_width="wrap_content"

          android:layout_height="wrap_content"

          android:id="@+id/textView10" android:layout_above="@+id/imgSkill1" android:layout_toRightOf="@+id/imgRole"

          android:layout_toEndOf="@+id/imgRole"/>

  <TextView

          android:text="技能1"

          android:textSize="20sp"

          android:layout_width="wrap_content"

          android:layout_height="wrap_content"

          android:id="@+id/tvSkill1"

          android:layout_alignTop="@+id/imgSkill1" android:layout_toRightOf="@+id/imgSkill1"

          android:layout_alignParentRight="true" android:layout_alignParentEnd="true"/>

  <TextView

          android:text="@string/dq"

          android:textSize="20sp"

          android:layout_width="wrap_content"

          android:layout_height="wrap_content" android:layout_below="@+id/tvSkill1"

          android:layout_toRightOf="@+id/imgSkill1" android:layout_toEndOf="@+id/imgSkill1"

          android:layout_marginTop="12dp" android:id="@+id/textView12"/>

  <TextView

          android:text="@string/mb"

          android:textSize="20sp"

          android:layout_width="wrap_content"

          android:layout_height="wrap_content"

          android:layout_toRightOf="@+id/imgSkill1"

          android:id="@+id/textView13" android:layout_alignRight="@+id/textView12"

          android:layout_alignEnd="@+id/textView12" android:layout_above="@+id/imgSkill2"/>

  <TextView

          android:layout_width="wrap_content"

          android:textSize="20sp"

          android:layout_height="wrap_content" android:layout_alignTop="@+id/imgSkill2"

          android:layout_toRightOf="@+id/imgSkill2"

          android:id="@+id/tvSkill2"

          android:text="技能2" android:layout_alignParentRight="true" android:layout_alignParentEnd="true"/>

  <TextView

          android:text="@string/dq"

          android:textSize="20sp"

          android:layout_width="wrap_content"

          android:layout_height="wrap_content" android:layout_below="@+id/tvSkill2"

          android:layout_toRightOf="@+id/imgSkill2" android:layout_toEndOf="@+id/imgSkill2"

          android:layout_marginTop="13dp" android:id="@+id/textView15"/>

  <TextView

          android:text="@string/mb"

          android:textSize="20sp"

          android:layout_width="wrap_content"

          android:layout_height="wrap_content" android:layout_above="@+id/imgSkill3"

          android:layout_toRightOf="@+id/imgSkill2"

          android:id="@+id/textView16" android:layout_alignRight="@+id/textView15"

          android:layout_alignEnd="@+id/textView15"/>

  <TextView

          android:text="技能3"

          android:textSize="20sp"

          android:layout_width="wrap_content"

          android:layout_height="wrap_content" android:layout_alignTop="@+id/imgSkill3"

          android:layout_toRightOf="@+id/imgSkill3"

          android:id="@+id/tvSkill3"

          android:layout_alignParentRight="true" android:layout_alignParentEnd="true"/>

  <TextView

          android:text="@string/dq"

          android:textSize="20sp"

          android:layout_width="wrap_content"

          android:layout_height="wrap_content"

          android:layout_marginTop="11dp" android:id="@+id/textView18"

          android:layout_below="@+id/tvSkill3" android:layout_toRightOf="@+id/imgSkill3"

          android:layout_toEndOf="@+id/imgSkill3"/>

  <TextView

          android:text="@string/mb"

          android:textSize="20sp"

          android:layout_width="wrap_content"

          android:layout_height="wrap_content" android:layout_alignBottom="@+id/imgSkill3"

          android:layout_toRightOf="@+id/imgSkill3"

          android:id="@+id/textView19" android:layout_alignRight="@+id/textView18"

          android:layout_alignEnd="@+id/textView18"/>

  <Spinner

          android:layout_width="match_parent"

          android:entries="@array/lingji"

          android:layout_height="wrap_content" android:layout_below="@+id/tvJob"

          android:layout_toEndOf="@+id/textView8"

          android:id="@+id/spinner" android:layout_alignLeft="@+id/spinner2"

          android:layout_alignStart="@+id/spinner2"/>

  <Spinner

          android:layout_width="match_parent"

          android:entries="@array/lingji"

          android:layout_height="wrap_content" android:layout_alignTop="@+id/textView10"

          android:layout_toEndOf="@+id/tvJob"

          android:id="@+id/spinner2"

          android:layout_toRightOf="@+id/tvJob"/>

  <Spinner

          android:layout_width="match_parent"

          android:entries="@array/Skill"

          android:layout_height="wrap_content" android:layout_alignTop="@+id/textView12"

          android:layout_toEndOf="@+id/textView12"

          android:id="@+id/spinner3"

          android:layout_alignLeft="@+id/spinner2" android:layout_alignStart="@+id/spinner2"/>

  <Spinner

          android:layout_width="match_parent"

          android:entries="@array/Skill"

          android:layout_height="wrap_content" android:layout_alignTop="@+id/textView13"

          android:layout_toEndOf="@+id/textView13"

          android:id="@+id/spinner4"

          android:layout_alignLeft="@+id/spinner3" android:layout_alignStart="@+id/spinner3"/>

  <Spinner

          android:layout_width="match_parent"

          android:entries="@array/Skill"

          android:layout_height="wrap_content"

          android:id="@+id/spinner5" android:layout_alignBottom="@+id/textView15"

          android:layout_alignLeft="@+id/spinner4" android:layout_alignStart="@+id/spinner4"/>

  <Spinner

          android:entries="@array/Skill"

          android:layout_width="match_parent"

          android:layout_height="wrap_content"

          android:id="@+id/spinner6"

          android:layout_alignTop="@+id/textView16" android:layout_alignParentRight="true"

          android:layout_alignParentEnd="true" android:layout_alignLeft="@+id/spinner5"

          android:layout_alignStart="@+id/spinner5"/>

  <Spinner

          android:entries="@array/Skill"

          android:layout_width="match_parent"

          android:layout_height="wrap_content" android:layout_alignTop="@+id/textView18"

          android:id="@+id/spinner8" android:layout_toRightOf="@+id/button" android:layout_toEndOf="@+id/button"/>

  <Spinner

          android:entries="@array/Skill"

          android:layout_width="match_parent"

          android:layout_height="wrap_content" android:layout_alignBottom="@+id/textView19"

          android:layout_alignLeft="@+id/spinner8" android:layout_alignStart="@+id/spinner8"

          android:id="@+id/spinner9"/>

  <Button

          android:text="添加到我的规划"

          android:textSize="15sp"

          android:layout_width="wrap_content"

          android:layout_height="wrap_content" android:layout_below="@+id/imgSkill3"

          android:id="@+id/button"

          android:layout_alignRight="@+id/tvJob" android:layout_alignEnd="@+id/tvJob"

          android:layout_toRightOf="@+id/imgSkill3" android:layout_toEndOf="@+id/imgSkill3"/>



</RelativeLayout>